set(BSTRLIB_LIBRARIES bstrlib CACHE INTERNAL "")
set(BSTRLIB_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/ CACHE INTERNAL "")

file(GLOB_RECURSE SOURCES *.c*)

add_library(bstrlib STATIC ${SOURCES})
target_include_directories(bstrlib PUBLIC ${BSTRLIB_INCLUDE_DIRS})

install(TARGETS bstrlib
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/lib
    COMPONENT library)
